--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,16 @@ dependencies:
   get_it: ^8.0.3
   injectable: ^2.5.0
   freezed_annotation: ^2.4.4
+  xml: ^5.4.1
+  image: ^3.1.3
   flutter_bloc: ^9.0.0
   go_router: ^14.8.0
   json_annotation: ^4.9.0
 
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
+
 
 dev_dependencies:
   freezed: ^2.5.7
@@ -30,11 +32,12 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-assets:
-  - assets/books/
+
 
 
 flutter:
 
   uses-material-design: true
 
+  assets:
+    - assets/books/
