--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   injectable: ^2.5.0
   freezed_annotation: ^2.4.4
   xml: ^5.4.1
+  http: ^1.3.0
   image: ^3.1.3
   flutter_bloc: ^9.0.0
   go_router: ^14.8.0
